Bug 156686 - AutoFilter arrows have white background in kf5/gen
Summary: AutoFilter arrows have white background in kf5/gen
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2023-08-09 00:22 UTC by Rafael Lima
Modified: 2023-08-13 21:36 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (32.22 KB, image/png)
2023-08-09 00:22 UTC, Rafael Lima
Details
Dark arrow with dark background (28.11 KB, image/png)
2023-08-13 21:35 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-08-09 00:22:17 UTC
Created attachment 188857 [details]
Screenshot showing the problem

Using kf5 in LO 24.2 the arrows in the AutoFilter are black with an unnecessary white background. In gtk3 there's no such white background.

The problem does not happen in LO 7.5.x.

See attached image for more info.

System info

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3ce30d6a1ea1cd3e392cb21fa37102795578eeb7
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2023-08-09 08:01:57 UTC
This can also be seen with the default Breeze style on KDE (instead of a dark theme that's seen in the screenshot) or the gen VCL plugin.

Regression from:

commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
Author: Noel Grandin
Date:   Fri Apr 16 20:33:10 2021 +0200

    Convert internal vcl bitmap formats transparency->alpha (II)
    
    (Second attempt at landing this)
    
    Image formats and graphics APIs use alpha, not transparency,
    so change our internal formats and data structures to work directly
    with alpha, so we don't need to modify data before we push it to
    graphics APIs.
    
    Add a couple of new Color constants to make the intention
    of the vcl code clearer.
    
    Notes
    (*) On macOS, tweaking the logic in CreateWithSalBitmapAndMask
    to more accurately reflect the requirements of the
    CGImageCreateWithMask function seems to fix some
    tests.
    
    (*) The vcl code does not properly support gradients
    with transparency. So the previous code was wrong, and this
    change is going to result in slightly different wrongness.
    
    Change-Id: I9e21c2e98d88ecfdc5f75db13bd1ffff7c38db98
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114168
    Tested-by: Jenkins
    Reviewed-by: Patrick Luby
    Reviewed-by: Noel Grandin
Comment 2 Patrick (volunteer) 2023-08-09 11:51:13 UTC
On macOS, I can reproduce this bug with Skia/Metal, Skia/Raster, and Skia disabled. Also, it isn't just with with Breeze icons. I see this bug with Sukapura Dark as well.
Comment 3 Commit Notification 2023-08-12 20:01:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d635e73308dc6fcea9897855b5167be09f52f840

tdf#156686 AutoFilter arrows have white background in kf5/gen

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Patrick (volunteer) 2023-08-12 20:48:20 UTC
(In reply to Patrick Luby from comment #2)
> On macOS, I can reproduce this bug with Skia/Metal, Skia/Raster, and Skia
> disabled. Also, it isn't just with with Breeze icons. I see this bug with
> Sukapura Dark as well.

I can confirm that the patch in https://bugs.documentfoundation.org/show_bug.cgi?id=156686#c3 fixes this bug on macOS in my local build.
Comment 5 Rafael Lima 2023-08-13 21:35:51 UTC
Created attachment 188956 [details]
Dark arrow with dark background

I can verify that the issue has been fixed. The arrow now longer has a white background.

However, another issue arises... the arrow is black over a dark background (see attached screenshot). I'll create a new report about this.

Verified with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 926c5246b6694d469a6caed5d7ea4c3a68648468
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded