tdf#156686 AutoFilter arrows have white background in kf5/gen

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: Ia2248b27cbe20296fc6f96a4afc0c38e29f8750f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155641
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>